# APCSP

./: README.md
1.1.5 - Run Robot Run/: robot_maze1_ws.py  robot_maze2_ws.py  robot_maze3_ws.py
1.1.6 - Buggy Image/ladybug/: ladybug.py
1.1.6 - Buggy Image/spider/: spider.py  spiderfinal.py
1.1.7 - Traversing Turtles/: main.py  traversing.py
1.2.1 - Catch a Turtle/: catch.py  throw.py
1.2.2 - Turtle Leaderboard/: game.py  leaderboard.py  leaderboard.txt
1.2.3 - Apple Avalanche/: debug.py  final.py  main.py  remain.py  reremain.py
1.2.4 - Turtle Escape/: 1_mazedoors.py  2.5_badmazerand.py  2_and_a_half_badmazerand.py  2_mazebarriers.py  3_mazerand.py  4_maze_runner.py  maze.py  mazedoors.py
2.1.3 - Password Strength/: main.py  pwalgorithms.py
2.1.3.1 - Multifactor GUI/: main.py
3.2.1 - Trends In Temperature/: main.py  pyproject.toml
3.2.1 - Trends In Temperature/3.2.2 - Shocking Data Trends/: main.py
3.2.2 - Shocking Data Trends/: elec_access_data.csv
CREATE Task/: .gitignore  buildings.py  cursor.py  main.py  save.txt  utils.py
